@@ -1,3 +1,7 @@
+2017-12-13  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (nth_day): add function
+
 2017-10-11  Enrico Schumann  <es@enricoschumann.net>
 
 	* DESCRIPTION (Version): 0.2-8
